Changes on projects page

--- a/Projects.html
+++ b/Projects.html
@@ -3,7 +3,7 @@
 <head>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/portfolio/static/css/style.css">
+    <link rel="stylesheet" href="/static/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
 </head>
@@ -17,17 +17,17 @@
                     </div>
                 </div></big>
                 <div class="navhead">
-                    <a class="navlink" href="/portfolio/index.html" target="_main">Home</a>
-                    <a class="navlink" href="/portfolio/Education.html" target="_main">Education</a>
-                    <a class="navlink" href="/portfolio/Experience.html">Experiences</a>
-                    <a class="navlink" href="/portfolio/Projects.html">Projects</a>
-                    <a class="navlink" href="/portfolio/Contact Me.html">Contact Me</a> 
+                    <a class="navlink" href="index.html" target="_main">Home</a>
+                    <a class="navlink" href="Education.html" target="_main">Education</a>
+                    <a class="navlink" href="Experience.html">Experiences</a>
+                    <a class="navlink" href="Projects.html">Projects</a>
+                    <a class="navlink" href="mailto:amiadrishikhar@gmail.com?subject=Portfolio%20Inquiry&body=Hello%20Adrishikhar,%20I%20would%20like%20to%20discuss..." target="_main" style="color: white; text-decoration: none;">Contact Me</a> 
                 </div>
     </div>
     </header>
     <main>
         <div class="contact">
-            <a href="/portfolio/Contact Me.html"><i class="fa-regular fa-message"></i></a>
+            <a class="navlink" href="mailto:amiadrishikhar@gmail.com?subject=Portfolio%20Inquiry&body=Hello%20Adrishikhar,%20I%20would%20like%20to%20discuss..." target="_main" style="color: white; text-decoration: none;"><i class="fa-regular fa-message"></i></a>
         </div>
         <br><br>
             <section class="primary">
@@ -53,7 +53,7 @@
                             <li><b>Technologies Used:</b> Python</li>
                             <li><b>Key Features:</b> Random number generation, user input, conditional statements, loops</li>
                             <li><b>Key Takeaways:</b> Problem-solving, user interaction, game development fundamentals</li>
-                            <li><b>Links:</b> <a href="https://github.com/AdrishikharChowdhury/Python-Problems-And-Solutions/blob/main/Mini%20projects/Guess%20the%20number.py" target="_main" style="color: blue"> View code on GitHub</a></li>
+                            <li><b>Links:</b> <a href="https://bit.ly/3WziJFD" target="_main" style="color: blue">https://bit.ly/3WziJFD</a></li>
                     </ul>
                     </p>
                 </section>
@@ -69,7 +69,7 @@
                         <li><b>Technologies Used:</b> Python</li>
                         <li><b>Key Features:</b> Random password generation, user input, string manipulation</li>
                         <li><b>Key Takeaways:</b> Data security, utility tools, string operations</li>
-                        <li><b>Links:</b> <a href="https://github.com/AdrishikharChowdhury/Python-Problems-And-Solutions/blob/main/Mini%20projects/Random%20Pass%20Generator.py" target="_main" style="color: blue"> View code on GitHub</a></li>
+                        <li><b>Links:</b> <a href="https://bit.ly/40sWxhP" target="_main" style="color: blue"> https://bit.ly/40sWxhP</a></li>
                     </ul>
                 </section>
             </div>
@@ -84,7 +84,7 @@
                         <li><b>Technologies Used:</b> C</li>
                         <li><b>Key Features:</b> Structs, arrays, conditional statements</li>
                         <li><b>Key Takeaways:</b> Game logic, data structures, competitive programming</li>
-                        <li><b>Links:</b> <a href="https://github.com/AdrishikharChowdhury/Pokemon-Fight.git" target="_main" style="color: blue"> View code on GitHub</a></li>
+                        <li><b>Links:</b> <a href="https://bit.ly/40tNlJT" target="_main" style="color: blue"> https://bit.ly/40tNlJT</a></li>
                     </ul>
                 </section>
             </div>
@@ -99,7 +99,7 @@
                         <li><b>Technologies Used:</b> Python</li>
                         <li><b>Key Features:</b> Object-oriented programming, classes, methods, user input</li>
                         <li><b>Key Takeaways:</b> OOP concepts, user interfaces, basic banking operations</li>
-                        <li><b>Links:</b> <a href="https://github.com/AdrishikharChowdhury/Python-Problems-And-Solutions/blob/main/Banking%20System.py" target="_main" style="color: blue"> View code on GitHub</a>
+                        <li><b>Links:</b> <a href="https://bit.ly/40tNo8x" target="_main" style="color: blue"> https://bit.ly/40tNo8x</a>
                         </li>
                     </ul>    
                 </section>
@@ -115,7 +115,7 @@
                         <li><b>Technologies Used:</b> HTML, CSS</li>
                         <li><b>Key Features:</b> Web design, layout, content organization</li>
                         <li><b>Key Takeaways:</b> Front-end development, personal branding, web presence</li>
-                        <li><b>Links:</b> <a href="https://github.com/AdrishikharChowdhury/Project-Portfolio.git"  target="_main" style="color: blue">View code on GitHub</a></li>
+                        <li><b>Links:</b> <a href="https://bit.ly/3PV0GWE"  target="_main" style="color: blue"> https://bit.ly/3PV0GWE</a></li>
                     </ul>
                 </section>
             </div>
