--- a/Projects.html
+++ b/Projects.html
@@ -3,7 +3,7 @@
 <head>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/static/css/style.css">
+    <link rel="stylesheet" href="/portfolio/static/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
 </head>
@@ -21,7 +21,7 @@
                     <a class="navlink" href="Education.html" target="_main">Education</a>
                     <a class="navlink" href="Experience.html">Experiences</a>
                     <a class="navlink" href="Projects.html">Projects</a>
-                    <a class="navlink" href="mailto:amiadrishikhar@gmail.com?subject=Portfolio%20Inquiry&body=Hello%20Adrishikhar,%20I%20would%20like%20to%20discuss..." target="_main" style="color: white; text-decoration: none;">Contact Me</a> 
+                    <a class="navlink" href="Contact Me.html">Contact Me</a> 
                 </div>
     </div>
     </header>
