--- a/Education.html
+++ b/Education.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="https://cdn.glitch.global/60a890c3-caee-4e3f-8a61-bb90e5c70aa8/favicon.png?v=1737820814093">
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/portfolio/static/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/mobilestyle.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Education</title>
 </head>
@@ -77,7 +79,7 @@
                     <li><b>Key courseworks:</b> Data structures,Artificial Intelligence,IELTS,Python,Java,OOPs</li>
                     <li><b>Mini projects:</b> Guess The Number Game, Password Generator, Pokemon Battle Simulation, Banking system, Portfolio page</li>
                 </ul>
-                (Details in <a href="/portfolio/Projects.html" target="_main" style="color:blue">Projects</a> page)
+                <p>(Details in <a href="/portfolio/Projects.html" target="_main" style="color:blue">Projects</a> page)</p>
             </section>
         </div>
     </main>
