--- a/Experience.html
+++ b/Experience.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/portfolio/static/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/mobilestyle.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="https://cdn.glitch.global/60a890c3-caee-4e3f-8a61-bb90e5c70aa8/favicon.png?v=1737820814093">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Experiences</title>
 </head>
@@ -67,7 +69,7 @@
                     <li> <b>Banking System</b><i>(November 2024)</i>: A simple banking system where you can create an account, deposit money, withdraw money and check balance</li>
                     <li><b>Portfolio Page</b><i>(January 2025)</i>: A simple portfolio page where I have mentioned my details</li>
                 </ul>
-                    (All of the project details in the <a href="/portfolio/Projects.html" target="_main" style="color:blue">projects </a>page)
+                    <p>(All of the project details in the <a href="/portfolio/Projects.html" target="_main" style="color:blue">projects </a>page)</p>
             </p>
         </section>
     </div>
