--- a/Projects.html
+++ b/Projects.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="https://cdn.glitch.global/60a890c3-caee-4e3f-8a61-bb90e5c70aa8/favicon.png?v=1737820814093">
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/static/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/mobilestyle.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
 </head>
@@ -133,7 +135,29 @@
                         <li><b>Links:</b> <a href="https://github.com/AdrishikharChowdhury/Project-LearnHub.git" target="_main" style="color: blue">View code on GitHub</a></li>
                     </ul>
                 </section>
-            </div>            
+            </div>
+            <div>
+                <section>
+                    <p><big><b>Amazon Clone</b></big></p>
+                    <ul>
+                        <li><b>Date:</b> February 2025</li>
+                        <li><b>Description:</b>
+                            Built a fully responsive clone of the Amazon website, replicating key features such as product listings, navigation, and category pages. The project focuses on delivering an authentic user experience with modern design practices.
+                        </li>
+                        <li><b>Technologies Used:</b> HTML, CSS, Font Awesome (for icons)</li>
+                        <li><b>Key Features:</b> 
+                            Responsive design, dynamic category pages (Clothes, Electronics, Gaming, etc.), search functionality, and a user-friendly interface.
+                        </li>
+                        <li><b>Key Takeaways:</b> 
+                            Front-end web development, responsive design techniques, and effective UI/UX design for e-commerce platforms.
+                        </li>
+                        <li><b>Links:</b> 
+                            <a href="https://github.com/AdrishikharChowdhury/Amazon-clone.git" target="_main" style="color: blue">View code on GitHub</a>
+                        </li>
+                    </ul>
+                </section>
+                
+            </div>          
     </main>
         <hr>
         <div>
