--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="https://cdn.glitch.global/60a890c3-caee-4e3f-8a61-bb90e5c70aa8/favicon.png?v=1737820814093">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/portfolio/static/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/mobilestyle.css">
     <title>My Portfolio</title>
 </head>
 <body>
@@ -13,14 +15,11 @@
         <div class="navbar">
                 <big>
                     <div class="customhead">
-                        
-                            <div id="logo">
-
-                            </div>
-                        
-                    </div></big>
+                            <div id="logo"></div>
+                    </div>
+                </big>
                 <div class="navhead">
-                    <a class="navlink" href="/portfolio/home.html" target="_main">Home</a>
+                    <a class="navlink" href="/portfolio/index.html" target="_main">Home</a>
                     <a class="navlink" href="/portfolio/Education.html" target="_main">Education</a>
                     <a class="navlink" href="/portfolio/Experience.html">Experiences</a>
                     <a class="navlink" href="/portfolio/Projects.html">Projects</a>
